# device-status-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/: deploy.yml
.github/workflows/: deploy.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  lib.rs
crates/server/src/config/: app_config.rs  app_state.rs  mod.rs
crates/server/src/controller/: device_controller.rs  get_device_response.rs  mod.rs  put_device_request.rs  put_device_response.rs  root_controller.rs
crates/server/src/exception/: app_error.rs  mod.rs
crates/server/src/model/: device.rs
crates/server/src/service/: device_cache_service.rs  device_service.rs  mod.rs  redis_service.rs
http/: device.http
src/: main.rs
