[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
http = "1.1.0"
log = "0.4.21"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.103", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = "0.4.38"
serde_with = "3.7.0"
anyhow = "1.0.82"
dotenvy = "0.15.7"
deadpool-redis = "0.15.0"
config = "0.14.0"
serde_json = "1.0.116"
tokio-cron-scheduler = "0.10.0"
async-std = "1.12.0"
tokio = { workspace = true }
rayon = "1.10.0"
futures = "0.3.30"
